refactor: script modified to populate with at least 1GB of data"

--- a/python_scripts/main.ipynb
+++ b/python_scripts/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "            id_aluno SERIAL PRIMARY KEY,\n",
     "            nome VARCHAR(255) NOT NULL,\n",
     "            data_nascimento DATE NOT NULL,\n",
-    "            email VARCHAR(255) UNIQUE NOT NULL\n",
+    "            email VARCHAR(255) NOT NULL\n",
     "        )\n",
     "        \"\"\",\n",
     "        \"\"\"\n",
@@ -118,68 +118,90 @@
     "        cur = conn.cursor()\n",
     "        fake = Faker()\n",
     "\n",
-    "        for _ in range(50):\n",
+    "        for _ in range(3000000):\n",
     "            nome = fake.name()\n",
-    "            data_nascimento = fake.date_of_birth(minimum_age=18, maximum_age=30)\n",
+    "            data_nascimento = fake.date_of_birth(minimum_age=18, maximum_age=40)\n",
     "            email = fake.email()\n",
     "            cur.execute(\"\"\"\n",
     "                INSERT INTO tb_aluno (nome, data_nascimento, email)\n",
     "                VALUES (%s, %s, %s)\n",
     "                \"\"\", (nome, data_nascimento, email))\n",
-    "\n",
-    "        cursos = ['Engenharia de Software', 'Medicina', 'Direito', 'Ciências Econômicas', 'Arquitetura']\n",
-    "        for curso in cursos:\n",
-    "            descricao = fake.sentence(nb_words=10)\n",
-    "            cur.execute(\"\"\"\n",
-    "                INSERT INTO tb_curso (nome, descricao)\n",
-    "                VALUES (%s, %s)\n",
-    "                \"\"\", (curso, descricao))\n",
-    "\n",
-    "        disciplinas = ['Algoritmos', 'Anatomia', 'Direito Penal', 'Macroeconomia', 'Projeto Arquitetônico']\n",
-    "        for i, disciplina in enumerate(disciplinas):\n",
-    "            creditos = random.randint(2, 6)\n",
-    "            cur.execute(\"\"\"\n",
-    "                INSERT INTO tb_disciplina (nome, creditos)\n",
-    "                VALUES (%s, %s)\n",
-    "                \"\"\", (disciplina, creditos))\n",
-    "        \n",
-    "        for i in range(1, len(disciplinas) + 1):\n",
+    "     \n",
+    "        turma_id = 1\n",
+    "        for disciplina_id in range(1, 6):\n",
     "            for ano in [2023, 2024]:\n",
-    "                semestre = random.choice([1, 2])\n",
-    "                cur.execute(\"\"\"\n",
-    "                    INSERT INTO tb_turma (id_disciplina, ano, semestre)\n",
-    "                    VALUES (%s, %s, %s)\n",
-    "                    \"\"\", (i, ano, semestre))\n",
+    "                for _ in range(60000):\n",
+    "                    semestre = random.choice([1, 2])\n",
+    "                    cur.execute(\"\"\"\n",
+    "                        INSERT INTO tb_turma (id_disciplina, ano, semestre)\n",
+    "                        VALUES (%s, %s, %s)\n",
+    "                        \"\"\", (disciplina_id, ano, semestre))\n",
+    "                    turma_id += 1\n",
     "        \n",
-    "        for aluno_id in range(1, 51):\n",
-    "            curso_id = random.randint(1, len(cursos))\n",
+    "        for aluno_id in range(1, 3000001):\n",
+    "            curso_id = random.randint(1, 5)\n",
     "            data_matricula = fake.date_this_year()\n",
     "            cur.execute(\"\"\"\n",
     "                INSERT INTO tb_matricula (id_aluno, id_curso, data_matricula)\n",
     "                VALUES (%s, %s, %s)\n",
     "                \"\"\", (aluno_id, curso_id, data_matricula))\n",
     "        \n",
-    "        for aluno_id in range(1, 51):\n",
-    "            disciplina_id = random.randint(1, len(disciplinas))\n",
+    "        for aluno_id in range(1, 3000001):\n",
+    "            disciplina_id = random.randint(1, 5)\n",
     "            data_inscricao = fake.date_this_year()\n",
     "            cur.execute(\"\"\"\n",
     "                INSERT INTO tb_inscricao (id_aluno, id_disciplina, data_inscricao)\n",
     "                VALUES (%s, %s, %s)\n",
     "                \"\"\", (aluno_id, disciplina_id, data_inscricao))\n",
-    "\n",
-    "        for turma_id in range(1, len(disciplinas) * 2):\n",
-    "            for aluno_id in random.sample(range(1, 51), random.randint(5, 20)):\n",
+    "        \n",
+    "        for turma_id in range(1, 600001):\n",
+    "            alunos_turma = random.sample(range(1, 3000001), random.randint(50, 100))\n",
+    "            for aluno_id in alunos_turma:\n",
     "                status = random.choice(['Ativo', 'Concluído'])\n",
     "                cur.execute(\"\"\"\n",
     "                    INSERT INTO tb_turma_aluno (id_turma, id_aluno, status)\n",
     "                    VALUES (%s, %s, %s)\n",
     "                    \"\"\", (turma_id, aluno_id, status))\n",
-    "\n",
+    "        \n",
     "        conn.commit()\n",
     "        cur.close()\n",
-    "        print(\"Dados populados com sucesso.\")\n",
     "    except (Exception, psycopg2.DatabaseError) as error:\n",
     "        print(error)\n",
+    "    finally:\n",
+    "        if conn is not None:\n",
+    "            conn.close()\n",
+    "\n",
+    "def clean_tables():\n",
+    "    try:\n",
+    "        conn = psycopg2.connect(host=\"localhost\", dbname=\"postgres\", user=\"postgres\", password=\"jhis0909\", port=5432)\n",
+    "        cur = conn.cursor()\n",
+    "        truncate_sql = \"\"\"TRUNCATE TABLE tb_turma_aluno, tb_inscricao, tb_matricula, tb_turma, tb_disciplina, tb_curso, tb_aluno RESTART IDENTITY CASCADE;\"\"\"\n",
+    "        cur.execute(truncate_sql)\n",
+    "        conn.commit()\n",
+    "        cur.close()\n",
+    "    \n",
+    "    except (Exception, psycopg2.DatabaseError) as error:\n",
+    "        print(f\"Erro ao truncar tabelas: {error}\")\n",
+    "    \n",
+    "    finally:\n",
+    "        if conn is not None:\n",
+    "            conn.close()\n",
+    "\n",
+    "def drop_schemas():\n",
+    "    try:\n",
+    "        conn = psycopg2.connect(host=\"localhost\", dbname=\"postgres\", user=\"postgres\", password=\"jhis0909\", port=5432)\n",
+    "        cur = conn.cursor()\n",
+    "        drop_schema_sql = \"\"\"\n",
+    "        DROP SCHEMA public CASCADE;\n",
+    "        CREATE SCHEMA public;\n",
+    "        \"\"\"\n",
+    "        cur.execute(drop_schema_sql)\n",
+    "        conn.commit()\n",
+    "        cur.close()\n",
+    "    \n",
+    "    except (Exception, psycopg2.DatabaseError) as error:\n",
+    "        print(f\"Erro ao apagar esquema: {error}\")\n",
+    "    \n",
     "    finally:\n",
     "        if conn is not None:\n",
     "            conn.close()"
@@ -187,7 +209,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_schemas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -204,17 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dados populados com sucesso.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "clean_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "populate_tables()"
    ]
