refactor: adjusted to add up to 3GB of data

--- a/python_scripts/main.ipynb
+++ b/python_scripts/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,6 +118,48 @@
     "        cur = conn.cursor()\n",
     "        fake = Faker()\n",
     "\n",
+    "        cursos = [\n",
+    "            ('Engenharia de Software', 'Curso que abrange o desenvolvimento de software, desde a análise de requisitos até a manutenção.'),\n",
+    "            ('Ciência da Computação', 'Curso focado nos fundamentos teóricos e práticos da computação e desenvolvimento de sistemas.'),\n",
+    "            ('Sistemas de Informação', 'Curso que combina TI com gestão, voltado para o desenvolvimento e gerenciamento de sistemas de informação.'),\n",
+    "            ('Análise e Desenvolvimento de Sistemas', 'Curso que prepara profissionais para projetar, desenvolver e implementar sistemas de software.'),\n",
+    "            ('Redes de Computadores', 'Curso voltado para a infraestrutura e comunicação entre computadores em redes.'),\n",
+    "            ('Inteligência Artificial', 'Curso focado em aprendizado de máquina, redes neurais, e outras áreas da IA.'),\n",
+    "            ('Engenharia de Controle e Automação', 'Curso voltado para automação industrial e sistemas de controle.'),\n",
+    "            ('Segurança da Informação', 'Curso que aborda a proteção de dados e sistemas contra ataques e acessos não autorizados.')\n",
+    "        ]\n",
+    "\n",
+    "        disciplinas = [\n",
+    "            ('Fundamentos de Programação', 5),\n",
+    "            ('Estruturas de Dados e Algoritmos', 4),\n",
+    "            ('Banco de Dados', 4),\n",
+    "            ('Engenharia de Requisitos', 3),\n",
+    "            ('Arquitetura de Software', 4),\n",
+    "            ('Sistemas Operacionais', 4),\n",
+    "            ('Redes de Computadores', 3),\n",
+    "            ('Testes de Software', 3),\n",
+    "            ('Gestão de Projetos de Software', 3),\n",
+    "            ('Desenvolvimento Web', 5),\n",
+    "            ('Inteligência Artificial', 4),\n",
+    "            ('Segurança da Informação', 4),\n",
+    "            ('Engenharia de Software Ágil', 3),\n",
+    "            ('Desenvolvimento Mobile', 4),\n",
+    "            ('Machine Learning', 4)\n",
+    "        ]\n",
+    "\n",
+    "        for nome_curso, descricao in cursos:\n",
+    "            cur.execute(\"\"\"\n",
+    "                INSERT INTO tb_curso (nome, descricao)\n",
+    "                VALUES (%s, %s)\n",
+    "                RETURNING id_curso\n",
+    "                \"\"\", (nome_curso, descricao))\n",
+    "            \n",
+    "        for nome_disciplina, creditos in disciplinas:\n",
+    "            cur.execute(\"\"\"\n",
+    "                INSERT INTO tb_disciplina (nome, creditos)\n",
+    "                VALUES (%s, %s)\n",
+    "                \"\"\", (nome_disciplina, creditos))\n",
+    "\n",
     "        for _ in range(3000000):\n",
     "            nome = fake.name()\n",
     "            data_nascimento = fake.date_of_birth(minimum_age=18, maximum_age=40)\n",
@@ -125,10 +167,27 @@
     "            cur.execute(\"\"\"\n",
     "                INSERT INTO tb_aluno (nome, data_nascimento, email)\n",
     "                VALUES (%s, %s, %s)\n",
+    "                RETURNING id_aluno\n",
     "                \"\"\", (nome, data_nascimento, email))\n",
-    "     \n",
+    "            \n",
+    "            aluno_id = cur.fetchone()[0]\n",
+    "            \n",
+    "            curso_id = random.randint(1, len(cursos))\n",
+    "            data_matricula = fake.date_this_year()\n",
+    "            cur.execute(\"\"\"\n",
+    "                INSERT INTO tb_matricula (id_aluno, id_curso, data_matricula)\n",
+    "                VALUES (%s, %s, %s)\n",
+    "                \"\"\", (aluno_id, curso_id, data_matricula))\n",
+    "            \n",
+    "            disciplina_id = random.randint(1, len(disciplinas))\n",
+    "            data_inscricao = fake.date_this_year()\n",
+    "            cur.execute(\"\"\"\n",
+    "                INSERT INTO tb_inscricao (id_aluno, id_disciplina, data_inscricao)\n",
+    "                VALUES (%s, %s, %s)\n",
+    "                \"\"\", (aluno_id, disciplina_id, data_inscricao))\n",
+    "\n",
     "        turma_id = 1\n",
-    "        for disciplina_id in range(1, 6):\n",
+    "        for disciplina_id in range(1, len(disciplinas)):\n",
     "            for ano in [2023, 2024]:\n",
     "                for _ in range(60000):\n",
     "                    semestre = random.choice([1, 2])\n",
@@ -137,23 +196,7 @@
     "                        VALUES (%s, %s, %s)\n",
     "                        \"\"\", (disciplina_id, ano, semestre))\n",
     "                    turma_id += 1\n",
-    "        \n",
-    "        for aluno_id in range(1, 3000001):\n",
-    "            curso_id = random.randint(1, 5)\n",
-    "            data_matricula = fake.date_this_year()\n",
-    "            cur.execute(\"\"\"\n",
-    "                INSERT INTO tb_matricula (id_aluno, id_curso, data_matricula)\n",
-    "                VALUES (%s, %s, %s)\n",
-    "                \"\"\", (aluno_id, curso_id, data_matricula))\n",
-    "        \n",
-    "        for aluno_id in range(1, 3000001):\n",
-    "            disciplina_id = random.randint(1, 5)\n",
-    "            data_inscricao = fake.date_this_year()\n",
-    "            cur.execute(\"\"\"\n",
-    "                INSERT INTO tb_inscricao (id_aluno, id_disciplina, data_inscricao)\n",
-    "                VALUES (%s, %s, %s)\n",
-    "                \"\"\", (aluno_id, disciplina_id, data_inscricao))\n",
-    "        \n",
+    "\n",
     "        for turma_id in range(1, 600001):\n",
     "            alunos_turma = random.sample(range(1, 3000001), random.randint(50, 100))\n",
     "            for aluno_id in alunos_turma:\n",
@@ -162,7 +205,7 @@
     "                    INSERT INTO tb_turma_aluno (id_turma, id_aluno, status)\n",
     "                    VALUES (%s, %s, %s)\n",
     "                    \"\"\", (turma_id, aluno_id, status))\n",
-    "        \n",
+    "\n",
     "        conn.commit()\n",
     "        cur.close()\n",
     "    except (Exception, psycopg2.DatabaseError) as error:\n",
@@ -212,9 +255,7 @@
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "drop_schemas()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -235,18 +276,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "clean_tables()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "populate_tables()"
    ]
