feat: added descriptions to the code

--- a/python_scripts/main.ipynb
+++ b/python_scripts/main.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inicializar bibliotecas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,11 +19,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inicializar funções"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Tuple de funções que o SQL irá executar em ordem\n",
     "def create_tables():\n",
     "    commands = (\n",
     "        \"\"\"\n",
@@ -112,12 +127,14 @@
     "        if conn is not None:\n",
     "            conn.close()\n",
     "\n",
+    "# Processo de popular tabelas\n",
     "def populate_tables():\n",
     "    try:\n",
     "        conn = psycopg2.connect(host=\"localhost\", dbname=\"postgres\", user=\"postgres\", password=\"jhis0909\", port=5432)\n",
     "        cur = conn.cursor()\n",
     "        fake = Faker()\n",
-    "\n",
+    "        \n",
+    "        #Definição dos cursos e descrições\n",
     "        cursos = [\n",
     "            ('Engenharia de Software', 'Curso que abrange o desenvolvimento de software, desde a análise de requisitos até a manutenção.'),\n",
     "            ('Ciência da Computação', 'Curso focado nos fundamentos teóricos e práticos da computação e desenvolvimento de sistemas.'),\n",
@@ -129,6 +146,7 @@
     "            ('Segurança da Informação', 'Curso que aborda a proteção de dados e sistemas contra ataques e acessos não autorizados.')\n",
     "        ]\n",
     "\n",
+    "        # Inicialização das disciplinas e seus créditos\n",
     "        disciplinas = [\n",
     "            ('Fundamentos de Programação', 5),\n",
     "            ('Estruturas de Dados e Algoritmos', 4),\n",
@@ -214,6 +232,7 @@
     "        if conn is not None:\n",
     "            conn.close()\n",
     "\n",
+    "# Limpar todos os dados\n",
     "def clean_tables():\n",
     "    try:\n",
     "        conn = psycopg2.connect(host=\"localhost\", dbname=\"postgres\", user=\"postgres\", password=\"jhis0909\", port=5432)\n",
@@ -230,6 +249,7 @@
     "        if conn is not None:\n",
     "            conn.close()\n",
     "\n",
+    "# Dropar todas as tabelas\n",
     "def drop_schemas():\n",
     "    try:\n",
     "        conn = psycopg2.connect(host=\"localhost\", dbname=\"postgres\", user=\"postgres\", password=\"jhis0909\", port=5432)\n",
@@ -255,7 +275,9 @@
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Criar tabelas"
+   ]
   },
   {
    "cell_type": "code",
@@ -279,28 +301,15 @@
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Popular tabelas"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "populate_tables()"
    ]
