feat: added descriptions to the code

--- a/python_scripts/main.ipynb
+++ b/python_scripts/main.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,6 +178,7 @@
     "                VALUES (%s, %s)\n",
     "                \"\"\", (nome_disciplina, creditos))\n",
     "\n",
+    "        #Populando database com 3 Milhões de alunos\n",
     "        for _ in range(3000000):\n",
     "            nome = fake.name()\n",
     "            data_nascimento = fake.date_of_birth(minimum_age=18, maximum_age=40)\n",
@@ -204,6 +205,7 @@
     "                VALUES (%s, %s, %s)\n",
     "                \"\"\", (aluno_id, disciplina_id, data_inscricao))\n",
     "\n",
+    "        # Populando database com 60 mil turmas\n",
     "        turma_id = 1\n",
     "        for disciplina_id in range(1, len(disciplinas)):\n",
     "            for ano in [2023, 2024]:\n",
