criação de tabelas ok

--- a/python_scripts/main.ipynb
+++ b/python_scripts/main.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,102 +172,6 @@
     "        if conn is not None:\n",
     "            conn.close()\n",
     "\n",
-    "\n",
-    "# Tuple de funções que o SQL irá executar em ordem\n",
-    "def create_tables():\n",
-    "    commands = (\n",
-    "        \"\"\"\n",
-    "        CREATE TABLE tb_aluno (\n",
-    "            id_aluno SERIAL PRIMARY KEY,\n",
-    "            nome VARCHAR(255) NOT NULL,\n",
-    "            data_nascimento DATE NOT NULL,\n",
-    "            email VARCHAR(255) NOT NULL\n",
-    "        )\n",
-    "        \"\"\",\n",
-    "        \"\"\"\n",
-    "        CREATE TABLE tb_curso (\n",
-    "            id_curso SERIAL PRIMARY KEY,\n",
-    "            nome VARCHAR(255) NOT NULL,\n",
-    "            descricao TEXT\n",
-    "        )\n",
-    "        \"\"\",\n",
-    "        \"\"\"\n",
-    "        CREATE TABLE tb_disciplina (\n",
-    "            id_disciplina SERIAL PRIMARY KEY,\n",
-    "            nome VARCHAR(255) NOT NULL,\n",
-    "            creditos INT NOT NULL\n",
-    "        )\n",
-    "        \"\"\",\n",
-    "        \"\"\"\n",
-    "        CREATE TABLE tb_turma (\n",
-    "            id_turma SERIAL PRIMARY KEY,\n",
-    "            id_disciplina INT NOT NULL,\n",
-    "            ano INT NOT NULL,\n",
-    "            semestre INT NOT NULL,\n",
-    "            FOREIGN KEY (id_disciplina)\n",
-    "                REFERENCES tb_disciplina (id_disciplina)\n",
-    "                ON UPDATE CASCADE ON DELETE CASCADE\n",
-    "        )\n",
-    "        \"\"\",\n",
-    "        \"\"\"\n",
-    "        CREATE TABLE tb_matricula (\n",
-    "            id_aluno INT NOT NULL,\n",
-    "            id_curso INT NOT NULL,\n",
-    "            data_matricula DATE NOT NULL,\n",
-    "            PRIMARY KEY (id_aluno, id_curso),\n",
-    "            FOREIGN KEY (id_aluno)\n",
-    "                REFERENCES tb_aluno (id_aluno)\n",
-    "                ON UPDATE CASCADE ON DELETE CASCADE,\n",
-    "            FOREIGN KEY (id_curso)\n",
-    "                REFERENCES tb_curso (id_curso)\n",
-    "                ON UPDATE CASCADE ON DELETE CASCADE\n",
-    "        )\n",
-    "        \"\"\",\n",
-    "        \"\"\"\n",
-    "        CREATE TABLE tb_inscricao (\n",
-    "            id_aluno INT NOT NULL,\n",
-    "            id_disciplina INT NOT NULL,\n",
-    "            data_inscricao DATE NOT NULL,\n",
-    "            PRIMARY KEY (id_aluno, id_disciplina),\n",
-    "            FOREIGN KEY (id_aluno)\n",
-    "                REFERENCES tb_aluno (id_aluno)\n",
-    "                ON UPDATE CASCADE ON DELETE CASCADE,\n",
-    "            FOREIGN KEY (id_disciplina)\n",
-    "                REFERENCES tb_disciplina (id_disciplina)\n",
-    "                ON UPDATE CASCADE ON DELETE CASCADE\n",
-    "        )\n",
-    "        \"\"\",\n",
-    "        \"\"\"\n",
-    "        CREATE TABLE tb_turma_aluno (\n",
-    "            id_turma INT NOT NULL,\n",
-    "            id_aluno INT NOT NULL,\n",
-    "            status VARCHAR(50),\n",
-    "            PRIMARY KEY (id_turma, id_aluno),\n",
-    "            FOREIGN KEY (id_turma)\n",
-    "                REFERENCES tb_turma (id_turma)\n",
-    "                ON UPDATE CASCADE ON DELETE CASCADE,\n",
-    "            FOREIGN KEY (id_aluno)\n",
-    "                REFERENCES tb_aluno (id_aluno)\n",
-    "                ON UPDATE CASCADE ON DELETE CASCADE\n",
-    "        )\n",
-    "        \"\"\"\n",
-    "    )\n",
-    "\n",
-    "    try:\n",
-    "        conn = psycopg2.connect(host=\"localhost\", dbname=\"postgres\", user=\"postgres\", password=\"jhis0909\", port=5432)\n",
-    "        cur = conn.cursor()\n",
-    "\n",
-    "        for command in commands:\n",
-    "            cur.execute(command)\n",
-    "\n",
-    "        cur.close()\n",
-    "        conn.commit()\n",
-    "        print(\"Tabelas criadas com sucesso.\")\n",
-    "    except (Exception, psycopg2.DatabaseError) as error:\n",
-    "        print(error)\n",
-    "    finally:\n",
-    "        if conn is not None:\n",
-    "            conn.close()\n",
     "\n",
     "# Processo de popular tabelas\n",
     "def populate_tables():\n",
@@ -492,9 +396,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabelas criadas com sucesso.\n"
+     ]
+    }
+   ],
    "source": [
     "# Criar as tabelas\n",
     "create_tables()\n"
@@ -502,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
