--- a/python_scripts/main.ipynb
+++ b/python_scripts/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,24 +172,6 @@
     "        if conn is not None:\n",
     "            conn.close()\n",
     "\n",
-    "\n",
-    "def clean_tables():\n",
-    "    try:\n",
-    "        conn = psycopg2.connect(host=\"localhost\", dbname=\"gestao_universitaria_ETL\", user=\"postgres\", password=\"0710\", port=5432)\n",
-    "        cur = conn.cursor()\n",
-    "        truncate_sql = \"\"\"TRUNCATE TABLE tb_turma_aluno, tb_inscricao, tb_matricula, tb_turma, tb_disciplina, tb_curso, tb_aluno RESTART IDENTITY CASCADE;\"\"\"\n",
-    "        cur.execute(truncate_sql)\n",
-    "        conn.commit()\n",
-    "        print(\"Tabelas limpas com sucesso\")\n",
-    "        cur.close()\n",
-    "    \n",
-    "    except (Exception, psycopg2.DatabaseError) as error:\n",
-    "        print(f\"Erro ao truncar tabelas: {error}\")\n",
-    "    \n",
-    "    finally:\n",
-    "        if conn is not None:\n",
-    "            conn.close()\n",
-    "\n",
     "# Função para popular tabelas\n",
     "def populate_tables():\n",
     "    try:\n",
@@ -283,12 +265,50 @@
     "    finally:\n",
     "        if conn is not None:\n",
     "            conn.close()\n",
+    "\n",
+    "def clean_tables():\n",
+    "    try:\n",
+    "        conn = psycopg2.connect(host=\"localhost\", dbname=\"gestao_universitaria_ETL\", user=\"postgres\", password=\"0710\", port=5432)\n",
+    "        cur = conn.cursor()\n",
+    "        truncate_sql = \"\"\"TRUNCATE TABLE tb_turma_aluno, tb_inscricao, tb_matricula, tb_turma, tb_disciplina, tb_curso, tb_aluno RESTART IDENTITY CASCADE;\"\"\"\n",
+    "        cur.execute(truncate_sql)\n",
+    "        conn.commit()\n",
+    "        print(\"Tabelas limpas com sucesso\")\n",
+    "        cur.close()\n",
+    "    \n",
+    "    except (Exception, psycopg2.DatabaseError) as error:\n",
+    "        print(f\"Erro ao truncar tabelas: {error}\")\n",
+    "    \n",
+    "    finally:\n",
+    "        if conn is not None:\n",
+    "            conn.close()\n",
+    "\n",
+    "\n",
+    "def export_to_csv():\n",
+    "    try:\n",
+    "        conn = psycopg2.connect(host=\"localhost\", dbname=\"gestao_universitaria_ETL\", user=\"postgres\", password=\"0710\", port=5432)\n",
+    "        cur = conn.cursor()\n",
+    "        \n",
+    "        tables = [\"tb_aluno\", \"tb_curso\", \"tb_disciplina\", \"tb_turma\", \"tb_matricula\", \"tb_inscricao\", \"tb_turma_aluno\"]\n",
+    "        for table in tables:\n",
+    "            with open(f'{table}.csv', 'w') as f:\n",
+    "                cur.copy_expert(f\"COPY {table} TO STDOUT WITH CSV HEADER\", f)\n",
+    "        \n",
+    "        cur.close()\n",
+    "        print(\"Dados exportados com sucesso.\")\n",
+    "    except (Exception, psycopg2.DatabaseError) as error:\n",
+    "        print(f\"Erro ao exportar dados: {error}\")\n",
+    "    finally:\n",
+    "        if conn is not None:\n",
+    "            conn.close()\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +335,7 @@
      "output_type": "stream",
      "text": [
       "Erro ao inserir dados: ERRO:  duplicar valor da chave viola a restrição de unicidade \"tb_turma_aluno_pkey\"\n",
-      "DETAIL:  Chave (id_turma, id_aluno)=(1, 63) já existe.\n",
+      "DETAIL:  Chave (id_turma, id_aluno)=(1, 15) já existe.\n",
       "\n"
      ]
     }
@@ -327,12 +347,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -349,10 +365,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dados exportados com sucesso.\n"
+     ]
+    }
+   ],
+   "source": [
+    "export_to_csv()"
+   ]
   },
   {
    "cell_type": "code",
